--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-size: 18px;
+  font-size: clamp(12px, 1.82vw, 18px);
   line-height: 1.2188888889;
   color: #333;
 }
@@ -48,16 +48,16 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
+  width: clamp(24px, 5.05vw, 50px);
+  height: clamp(24px, 5.05vw, 50px);
   border-radius: 50%;
   background: #fff;
   transition: 0.3s ease;
 }
 .modal-close .modal-close__icon {
   display: block;
-  width: 20px;
-  height: 20px;
+  width: clamp(10px, 2.02vw, 20px);
+  height: clamp(10px, 2.02vw, 20px);
 }
 .modal-close:hover {
   background: rgba(255, 171, 213, 0.6392156863);
@@ -65,6 +65,8 @@ button {
 
 .modal {
   display: none;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   margin: auto;
@@ -92,24 +94,46 @@ button {
   background: #d5d5d5;
   color: #333;
   border-radius: 20px;
+  overflow: hidden;
   margin: auto;
-  position: absolute;
+  position: relative;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   z-index: 1;
 }
+@media (max-width: 1199px) {
+  .modal .modal__container {
+    overflow-x: hidden;
+    overflow-y: auto;
+    max-height: calc(100% - 60px) !important;
+    height: auto;
+  }
+}
+@media (max-width: 767px) {
+  .modal .modal__container {
+    width: calc(100% - 30px) !important;
+    max-width: calc(100% - 30px) !important;
+    max-height: calc(100% - 30px) !important;
+  }
+}
 .modal .modal__close {
   position: absolute;
-  top: 14px;
-  right: 14px;
+  top: clamp(7px, 1.41vw, 14px);
+  right: clamp(5px, 1.41vw, 14px);
 }
 .modal .modal__title {
-  font-size: 34px;
+  padding-right: clamp(36px, 8.07vw, 80px);
+  font-size: clamp(17px, 3.43vw, 34px);
   font-weight: 700;
   line-height: 1.4117647059;
   color: #333;
+}
+@media (max-width: 991px) {
+  .modal .modal__title {
+    line-height: 1.3529411765;
+  }
 }
 
 .discount {
@@ -117,7 +141,7 @@ button {
   height: calc(100% - 60px);
   max-width: 1000px !important;
   max-height: 570px !important;
-  padding: 33px 48px 37px 43px;
+  padding: clamp(19px, 3.33vw, 33px) clamp(15px, 4.84vw, 48px) clamp(24px, 3.73vw, 37px) clamp(15px, 4.34vw, 43px);
   background: url("/inc/img/modal-bg.jpg") no-repeat center center !important;
   background-size: cover !important;
 }
@@ -128,8 +152,13 @@ button {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  gap: 43px;
-  margin-top: 24px;
+  gap: clamp(11px, 4.34vw, 43px);
+  margin-top: clamp(11px, 2.42vw, 24px);
+}
+@media (max-width: 991px) {
+  .discount .discount__body {
+    flex-direction: column;
+  }
 }
 .discount .discount__left {
   width: 100%;
@@ -141,7 +170,14 @@ button {
   flex-wrap: wrap;
   gap: 14px;
   width: 100%;
-  max-width: 413px;
+  max-width: clamp(240px, 41.68vw, 413px);
+}
+@media (max-width: 991px) {
+  .discount .discount__right {
+    margin-left: auto;
+    margin-right: auto;
+    gap: 0;
+  }
 }
 .discount .discount__image {
   display: block;
@@ -158,43 +194,55 @@ button {
   gap: 13px;
   width: auto;
   height: auto;
-  padding: 12px 30px 12px 30px;
+  padding: clamp(8px, 1.21vw, 12px) clamp(22px, 3.03vw, 30px);
   border-radius: 30px;
   background: rgba(255, 255, 255, 0.5);
 }
+@media (max-width: 991px) {
+  .discount .discount__counter {
+    margin-top: -16px;
+    background: rgba(255, 255, 255, 0.9);
+  }
+}
 .discount .discount__counter-icon {
   display: block;
-  width: 30px;
-  height: 30px;
+  width: clamp(16px, 3.03vw, 30px);
+  height: clamp(16px, 3.03vw, 30px);
 }
 .discount .discount__counter-text {
-  font-size: 18px;
+  font-size: clamp(12px, 1.82vw, 18px);
   line-height: 1.6666666667;
 }
 .discount .discount__counter-value {
   color: #FF1B88;
 }
 .discount .discount__form {
-  margin-top: 30px;
+  margin-top: clamp(13px, 3.03vw, 30px);
 }
 
-.success-form {
+.success-modal {
   display: flex !important;
   justify-content: center;
   align-items: center;
   max-height: 250px !important;
-  padding: 40px;
+  padding: clamp(30px, 4.04vw, 40px) clamp(20px, 4.04vw, 40px);
   background: url("/inc/img/modal-bg.jpg") no-repeat center center !important;
   background-size: cover !important;
 }
-.success-form .success-form__title {
-  font-size: 30px;
+@media (max-width: 767px) {
+  .success-modal {
+    max-width: 280px !important;
+  }
+}
+.success-modal .success-modal__title {
+  font-size: clamp(17px, 3.03vw, 30px);
   line-height: 1.2;
   text-align: center;
+  padding-right: 0;
 }
 
 .puncts {
-  font-size: 18px;
+  font-size: clamp(12px, 1.82vw, 18px);
 }
 .puncts .puncts__title {
   font-weight: 500;
@@ -203,33 +251,33 @@ button {
 .puncts .puncts__list {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 14px;
+  grid-gap: clamp(7px, 1.41vw, 14px);
 }
 .puncts .puncts__item {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  gap: 12px;
+  gap: clamp(6px, 1.21vw, 12px);
 }
 .puncts .puncts__icon {
   display: block;
-  width: 26px;
-  height: 26px;
+  width: clamp(16px, 2.62vw, 26px);
+  height: clamp(16px, 2.62vw, 26px);
 }
 .form .form__label {
   display: block;
-  margin-bottom: 8px;
-  padding-left: 9px;
+  margin-bottom: clamp(6px, 0.81vw, 8px);
+  padding-left: clamp(0px, 0.91vw, 9px);
 }
 .form .form__input {
   width: 100%;
   height: auto;
-  padding: 15px 32px;
+  padding: clamp(11px, 1.51vw, 15px) clamp(21px, 3.23vw, 32px);
   background: #fff;
   border-radius: 40px;
   outline: none;
   border: none;
-  font-size: 18px;
+  font-size: clamp(14px, 1.82vw, 18px);
   font-weight: 400;
   line-height: 1.6666666667;
   text-align: left;
@@ -240,11 +288,11 @@ button {
   align-items: center;
   margin-top: 11px;
   width: 100%;
-  padding: 28px 32px;
+  padding: clamp(23px, 2.83vw, 28px) clamp(27px, 3.23vw, 32px);
   border-radius: 50px;
   background: linear-gradient(173.7deg, #FF1B88 4.27%, #FF1B88 94.36%), linear-gradient(173.7deg, #FF409B 4.27%, #F91381 94.36%);
   box-shadow: 0px 5px 0px 0px #D60669;
-  font-size: 22px;
+  font-size: clamp(16px, 2.22vw, 22px);
   font-weight: 700;
   line-height: 1.0909090909;
   text-align: center;
