--- a/inc/css/style.scss
+++ b/inc/css/style.scss
@@ -14,7 +14,7 @@ $mobile: 'max-width: 575px' !global;
     box-sizing: border-box;
 }
 body {
-    font-size: 18px;
+    font-size: clamp(12px, 1.82vw, 18px);
     line-height: 1.218888888888889;
     color: #333;
 }
@@ -56,8 +56,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50px;
-    height: 50px;
+    width: clamp(24px, 5.05vw, 50px);
+    height: clamp(24px, 5.05vw, 50px);
 
     border-radius: 50%;
     background: #fff;
@@ -65,8 +65,8 @@ button {
 
     & &__icon {
         display: block;
-        width: 20px;
-        height: 20px;
+        width: clamp(10px, 2.02vw, 20px);
+        height: clamp(10px, 2.02vw, 20px);
     }
 
     &:hover {
@@ -75,6 +75,8 @@ button {
 }
 .modal {
     display: none;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
 
@@ -103,25 +105,43 @@ button {
         background: #d5d5d5;
         color: #333;
         border-radius: 20px;
+        overflow: hidden;
 
         margin: auto;
-        position: absolute;
+        position: relative;
         top: 0;
         bottom: 0;
         left: 0;
         right: 0;
         z-index: 1;
+
+        @media ($tabletPlus) {
+            overflow-x: hidden;
+            overflow-y: auto;
+            max-height: calc(100% - 60px) !important;
+            height: auto;
+        }
+        @media ($mobilePlus) {
+            width: calc(100% - 30px) !important;
+            max-width: calc(100% - 30px) !important;
+            max-height: calc(100% - 30px) !important;
+        }
     }
     & &__close {
         position: absolute;
-        top: 14px;
-        right: 14px;
+        top: clamp(7px, 1.41vw, 14px);
+        right: clamp(5px, 1.41vw, 14px);
     }
     & &__title {
-        font-size: 34px;
+        padding-right: clamp(36px, 8.07vw, 80px);
+        font-size: clamp(17px, 3.43vw, 34px);
         font-weight: 700;
         line-height: 1.411764705882353;
         color: #333;
+
+        @media ($tablet) {
+            line-height: 1.352941176470588;
+        }
     }
 }
 
@@ -131,13 +151,12 @@ button {
     max-width: 1000px !important;
     max-height: 570px !important;
 
-    padding: 33px 48px 37px 43px;
+    padding: clamp(19px, 3.33vw, 33px)
+             clamp(15px, 4.84vw, 48px)
+             clamp(24px, 3.73vw, 37px)
+             clamp(15px, 4.34vw, 43px);
     background: url("/inc/img/modal-bg.jpg") no-repeat center center !important;
     background-size: cover !important;
-
-    @media ($tabletPlus) {
-
-    }
 
     & &__title {
         &-text1 {
@@ -149,8 +168,12 @@ button {
         display: flex;
         justify-content: flex-start;
         align-items: flex-start;
-        gap: 43px;
-        margin-top: 24px;
+        gap: clamp(11px, 4.34vw, 43px);
+        margin-top: clamp(11px, 2.42vw, 24px);
+
+        @media ($tablet) {
+            flex-direction: column;
+        }
     }
     & &__left {
         width: 100%;
@@ -162,7 +185,13 @@ button {
         flex-wrap: wrap;
         gap: 14px;
         width: 100%;
-        max-width: 413px;
+        max-width: clamp(240px, 41.68vw, 413px);
+
+        @media ($tablet) {
+            margin-left: auto;
+            margin-right: auto;
+            gap: 0;
+        }
     }
     & &__image {
         display: block;
@@ -180,17 +209,23 @@ button {
 
         width: auto;
         height: auto;
-        padding: 12px 30px 12px 30px;
+
+        padding: clamp(8px, 1.21vw, 12px) clamp(22px, 3.03vw, 30px);
         border-radius: 30px;
         background: rgba(255, 255, 255, 0.5);
 
+        @media ($tablet) {
+            margin-top: -16px;
+            background: rgba(255, 255, 255, 0.9);
+        }
+
         &-icon {
             display: block;
-            width: 30px;
-            height: 30px;
+            width: clamp(16px, 3.03vw, 30px);
+            height: clamp(16px, 3.03vw, 30px);
         }
         &-text {
-            font-size: 18px;
+            font-size: clamp(12px, 1.82vw, 18px);
             line-height: 1.666666666666667;
         }
         &-value {
@@ -198,26 +233,32 @@ button {
         }
     }
     & &__form {
-        margin-top: 30px;
+        margin-top: clamp(13px, 3.03vw, 30px);
     }
 }
-.success-form {
+.success-modal {
     display: flex !important;
     justify-content: center;
     align-items: center;
     max-height: 250px !important;
-    padding: 40px;
+    padding: clamp(30px, 4.04vw, 40px) clamp(20px, 4.04vw, 40px);
     background: url("/inc/img/modal-bg.jpg") no-repeat center center !important;
     background-size: cover !important;
+
+    @media ($mobilePlus) {
+        max-width: 280px !important;
+    }
+
     & &__title {
-        font-size: 30px;
+        font-size: clamp(17px, 3.03vw, 30px);
         line-height: 1.2;
         text-align: center;
+        padding-right: 0;
     }
 }
 
 .puncts {
-    font-size: 18px;
+    font-size: clamp(12px, 1.82vw, 18px);
 
     & &__title {
         font-weight: 500;
@@ -226,19 +267,19 @@ button {
     & &__list {
         display: grid;
         grid-template-columns: 1fr;
-        grid-gap: 14px;
+        grid-gap: clamp(7px, 1.41vw, 14px);
     }
 
     & &__item {
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        gap: 12px;
+        gap: clamp(6px, 1.21vw, 12px);
     }
     & &__icon {
         display: block;
-        width: 26px;
-        height: 26px;
+        width: clamp(16px, 2.62vw, 26px);
+        height: clamp(16px, 2.62vw, 26px);
     }
     & &__text {}
 }
@@ -246,20 +287,20 @@ button {
 .form {
     & &__label {
         display: block;
-        margin-bottom: 8px;
-        padding-left: 9px;
+        margin-bottom: clamp(6px, 0.81vw, 8px);
+        padding-left: clamp(0px, 0.91vw, 9px);
     }
     & &__input {
         width: 100%;
         height: auto;
-        padding: 15px 32px;
+        padding: clamp(11px, 1.51vw, 15px) clamp(21px, 3.23vw, 32px);
 
         background: #fff;
         border-radius: 40px;
         outline: none;
         border: none;
 
-        font-size: 18px;
+        font-size: clamp(14px, 1.82vw, 18px);
         font-weight: 400;
         line-height: 1.666666666666667;
         text-align: left;
@@ -271,14 +312,14 @@ button {
         
         margin-top: 11px;
         width: 100%;
-        padding: 28px 32px;
+        padding: clamp(23px, 2.83vw, 28px) clamp(27px, 3.23vw, 32px);
         border-radius: 50px;
 
         background: linear-gradient(173.7deg, #FF1B88 4.27%, #FF1B88 94.36%),
                     linear-gradient(173.7deg, #FF409B 4.27%, #F91381 94.36%);
         box-shadow: 0px 5px 0px 0px #D60669;
 
-        font-size: 22px;
+        font-size: clamp(16px, 2.22vw, 22px);
         font-weight: 700;
         line-height: 1.090909090909091;
         text-align: center;
